# url-shortener

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
.aws-sam/: build.toml  temp-template.yaml
events/: event.json
shorten_url_function/: app.py  exceptions.py  redirect_html_string.py  requirements.txt  url.py  urls_table.py
tests/integration/: test_api_gateway.py
tests/unit/: test_handler.py
